# PnP.AI.2023

./: .gitignore  README.md  pyproject.toml  requirements.txt
doc/0. 나의 첫 머신러닝/: README.md
doc/0. 나의 첫 머신러닝/1. 인공지능과 머신러닝, 딥러닝/: README.md
doc/0. 나의 첫 머신러닝/2. 코랩과 주피터 노트북/: README.md
doc/0. 나의 첫 머신러닝/3. 마켓과 머신러닝/: README.md
doc/1. 데이터 다루기/: README.md
doc/1. 데이터 다루기/1. 훈련 세트와 테스트 세트/: README.md
doc/1. 데이터 다루기/2. 데이터 전처리/: README.md
doc/2. 회귀 알고리즘과 모델 규제/: README.md
doc/2. 회귀 알고리즘과 모델 규제/1. k-최근접 이웃 회귀/: README.md
doc/2. 회귀 알고리즘과 모델 규제/2. 선형 회귀/: README.md
doc/2. 회귀 알고리즘과 모델 규제/3. 특성 공학과 규제/: README.md
doc/3. 다양한 분류 알고리즘/: README.md
doc/3. 다양한 분류 알고리즘/1. 로지스틱 회귀/: README.md
doc/3. 다양한 분류 알고리즘/2. 확률적 경사 하강법/: README.md
doc/4. 트리 알고리즘/: README.md
doc/4. 트리 알고리즘/1. 결정 트리/: README.md
doc/4. 트리 알고리즘/2. 교차 검증과 그리드 서치/: README.md
doc/4. 트리 알고리즘/3. 트리의 앙상블/: README.md
doc/5. 비지도 학습/: README.md
doc/5. 비지도 학습/1. 군집 알고리즘/: README.md
doc/5. 비지도 학습/2. k-평균/: README.md
doc/5. 비지도 학습/3. 주성분 분석/: README.md
doc/6. 딥러닝을 시작합니다/: README.md
doc/6. 딥러닝을 시작합니다/1. 인공 신경망/: README.md
doc/6. 딥러닝을 시작합니다/2. 심층 신경망/: README.md
doc/6. 딥러닝을 시작합니다/3. 신경망 모델 훈련/: README.md
doc/7. 합성곱 신경망/: README.md
doc/8. 순환 신경망/: README.md
src/: test.py
src/0-3/: data.py  main.py
src/1-1/: data.py  main.py
src/1-2/: main.py
src/2-1/: main.py
src/2-2/: data.py  main.py
src/2-3/: main.py
src/3-1/: data.py  main.py
src/3-2/: main.py
src/4-1/: main.py
src/4-2/: data.py  main.py
src/4-3/: main.py
src/6-1/: main.py
(+6 files in other folders)
