[tool.poetry]
name = "pnp-ai-2023"
version = "0.1.0"
description = ""
authors = ["RFLXN <solid2113@naver.com>"]
readme = "README.md"
packages = [{include = "pnp"}]

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "^1.3.0"
numpy = "^1.25.2"
matplotlib = "^3.7.2"
pandas = "^2.1.0"


[tool.poetry.group.dev.dependencies]
black = "^23.9.0"

[tool.black]
line-length = 120
target-version = ["py310"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
